--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark menu fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">LOGO
+      <h2>
+      <a class="navbar-brand" href="#">I&lt;.web
         <!-- <img src="images/kLogo.png" alt="logo image" class="navbar-brand-img"> -->
       </a>
+    </h2>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -120,11 +123,11 @@
       <div class=" pb-2 my-3">
         <div class=" ">
           <div class="bg-white p-4">
-            <h2 class="fw-bold text-capitalize text-start">
+            <h2 class="fw-bold text-start">
               No quieres una agencia de desarrollo web,
 
             </h2>
-            <h2 class="fw-bold text-capitalize text-start">
+            <h2 class="fw-bold text-start">
 
               quieres vender más
             </h2>
@@ -262,28 +265,28 @@
       <div class="row">
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box "><img src="images/portfolio/Economipedia.png" alt="Company 1 logo"
-              title="Company 1 Logo" class="img-fluid"></div>
+              title="Company 1 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box"><img src="images/portfolio/Somosquiere.png" alt="Company 2 logo"
-              title="Company 2 Logo" class="img-fluid"></div>
+              title="Company 2 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
 
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box "><img src="images/portfolio/Longevitas.png" alt="Company 4 logo"
-              title="Company 4 Logo" class="img-fluid"></div>
+              title="Company 4 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box "><img src="images/portfolio/micosguarderia.png" alt="Company 3 logo"
-              title="Company 3 Logo" class="img-fluid"></div>
+              title="Company 3 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box "><img src="images/portfolio/casadecor.png" alt="Company 5 logo"
-              title="Company 5 Logo" class="img-fluid"></div>
+              title="Company 5 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <div class="featured-in__logo-box"><img src="images/portfolio/Economipedia.png" alt="Company 6 logo"
-              title="Company 6 Logo" class="img-fluid"></div>
+              title="Company 6 Logo" class="img-fluid" style="max-width: 100%;"></div>
         </div>
       </div>
     </div>
@@ -638,7 +641,7 @@
         </div>
         <div class="col-md-6 p-3">
           <div class="row">
-            <div class="col-md-3 text-start">
+            <div class="col-md-3 text-end">
               <!-- Icono -->
               <i class="fas fa-envelope-open-text fa-3x"></i>
             </div>
@@ -881,7 +884,7 @@
       <!-- START THE CTA CONTENT -->
 
       <div class="row text-white get-started__box">
-        <div class="col-12 col-lg-6 get-started__box--left gradient  p-3">
+        <div class="col-12 col-lg-6 get-started__box--left gradient p-3">
           <div class="cta-info w-100">
             <h4 class="display-4 fw-bold">¿Quieres que hablemos?</h4>
             <p class="lh-lg">
@@ -896,8 +899,8 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
             </ul>
           </div>
         </div>
-        <div class="col-12 col-lg-6 bg-black get-started__box--right p-3 ">
-          <div class="form w-100 m-0">
+        <div class="col-12 col-lg-6 bg-black get-started__box--right ">
+          <div class="form w-100 ">
             <h4 class="display-3--title text-white mb-4">Inicia tu Proyecto</h4>
             <form action="#" class="row">
               <div class="col-lg-6 col-md-6 mb-3">
@@ -1016,18 +1019,23 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
 
     <!-- START THE CONTENT FOR COMPANY INFO -->
 
-    <!-- <div class="container mt-5 company-info px-3">
+    <div class="container mt-5 company-info px-3">
       <div class="row text-white justify-content-center mt-3 pb-3">
         <div class="col-12 col-sm-6 col-lg-6 mb-4 mb-sm-4 mb-md-0">
-          <h5 class="text-capitalize fw-bold">Unicorn Agency</h5>
+          <h5 class="text-capitalize fw-bold">
+            
+            I&lt;web Agency
+          </h5>
           <hr class="bg-white d-inline-block mb-4">
           <p class="lh-lg pe-md-5">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit dolor veniam temporibus voluptates! Eaque ut
-            atque architecto?
+            Nos enfocamos en impulsar los resultados de tus
+            activos digitales en términos de negocio, visibilidad y retorno. Ajustamos nuestras
+            estrategias a tu presupuesto para obtener mayores beneficios con menos
+            inversión.
           </p>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
-          <h5 class="text-capitalize fw-bold">Products</h5>
+          <h5 class="text-capitalize fw-bold">Nsosotros</h5>
           <hr class="bg-white d-inline-block mb-4">
           <ul class="list-inline company-list">
             <li><a href="#">lorem ipsum</a></li>
@@ -1037,7 +1045,7 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto pt-md-4 pt-lg-0">
-          <h5 class="text-capitalize fw-bold">Useful Links</h5>
+          <h5 class="text-capitalize fw-bold">Servicios</h5>
           <hr class="bg-white d-inline-block mb-4">
           <ul class="list-inline company-list">
             <li><a href="#">Your Account</a></li>
@@ -1047,7 +1055,7 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
           </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto pt-md-4 pt-lg-0">
-          <h5 class="text-capitalize fw-bold">Contact</h5>
+          <h5 class="text-capitalize fw-bold">Contacto</h5>
           <hr class="bg-white d-inline-block mb-4">
           <ul class="list-inline company-list">
             <li><a href="#">lorem ipsum</a></li>
@@ -1057,11 +1065,11 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
           </ul>
         </div>
       </div>
-    </div> -->
+    </div> 
 
     <!-- START THE COPYRIGHT INFO -->
 
-    <!-- <div class="footer-bottom py-5">
+    <div class="footer-bottom py-5">
       <div class="container">
         <div class="row text-center text-white">
           <div class="col-12">
@@ -1072,7 +1080,7 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
           </div>
         </div>
       </div>
-    </div> -->
+    </div> 
   </footer>
 
 
