--- a/paginas/desarrolloweb.html
+++ b/paginas/desarrolloweb.html
@@ -66,7 +66,7 @@
 
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Marketing digital y Desarrollo web para tu negocio</span>
+            <span class="display-2--intro">Desarrollo web para tu negocio</span>
             <p class="display-2--description lh-base small">
               Somos tu puerta de entrada al éxito en el mundo digital. Con una sólida experiencia en webs y marketing
               digital,
