--- a/paginas/marketingdigital.html
+++ b/paginas/marketingdigital.html
@@ -69,7 +69,7 @@
 
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Agencia de Marketing Digital</span>
+            <span class="display-2--intro">Somos una agencia de Marketing Digital</span>
             <p class="display-2--description lh-base small">
               Nos enfocamos en impulsar los resultados de tus
               activos digitales en términos de negocio, visibilidad y retorno. Ajustamos nuestras
