css and sections responsive

--- a/paginas/agencia.html
+++ b/paginas/agencia.html
@@ -124,14 +124,14 @@
 
     <!-- START SERVICES CONTENT -->
 
-    <div class="container px-5">
+    <div class="container px-3">
       <!-- SERVICES 1 -->
       <div class="row px-0 px-lg-5">
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">01 Diseño UX/UI
             </h3>
             <p class="lh-lg">
@@ -162,7 +162,7 @@ incluyendo sitios web y plataformas digitales.
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
           <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
+            <!-- <div class="icon d-block fas fa-code"></div> -->
             <h3 class="display-3--title mt-1">02 Diseño web a medida </h3>
             <p class="lh-lg">
               Nos especializamos en la creación de diseños web completamente
@@ -185,7 +185,7 @@ memorable.
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">03 Desarrollo web
             </h3>
             <p class="lh-lg">
@@ -215,7 +215,7 @@ de la marca.
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
           <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
+            <!-- <div class="icon d-block fas fa-code"></div> -->
             <h3 class="display-3--title mt-1">04 Desarrollo de tiendas online y ecommerce </h3>
             <p class="lh-lg">
               Nos especializamos en el desarrollo de tiendas en línea optimizadas para la
@@ -236,7 +236,7 @@ rendimiento de tu negocio en línea.
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">05 Diseño CRO
             </h3>
             <p class="lh-lg">
