--- a/paginas/marketingdigital.html
+++ b/paginas/marketingdigital.html
@@ -117,7 +117,7 @@
 
     <!-- START SERVICES CONTENT -->
 
-    <div class="container px-5">
+    <div class="container">
       <!-- SERVICES 1 -->
       <div class="row px-0 px-lg-5">
 
