--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark menu fixed-top">
     <div class="container">
-      <h2>
-      <a class="navbar-brand" href="#">I&lt;.web
+      <h2 >
+      <a class="navbar-brand fw-bold" href="#" style="font-size: 2rem;">I&lt;.web
         <!-- <img src="images/kLogo.png" alt="logo image" class="navbar-brand-img"> -->
       </a>
     </h2>
@@ -82,7 +82,7 @@
             </p>
           </h1>
           <a id="services" href="#servicios">
-            <button type="button" class="rounded-pill btn-rounded">
+            <button type="button" class=" btn-rounded">
               Más información<span><i class="fas fa-arrow-right"></i></span>
             </button>
           </a>
@@ -904,19 +904,24 @@ encantados de escucharte. Completa el formulario y te responderemos lo antes pos
             <h4 class="display-3--title text-white mb-4">Inicia tu Proyecto</h4>
             <form action="#" class="row">
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="Nombre" id="inputFirstName" class="form-control-lg form-control bg-dark text-white border-0">
+                <input type="text" placeholder="Nombre*" id="inputFirstName" class="form-control-lg form-control bg-dark text-white border-0" required>
               </div>
               <div class="col-lg-6 col-md-6 mb-3">
-                <input type="text" placeholder="Apellido" id="inputLastName" class="form-control-lg form-control bg-dark text-white border-0">
+                <input type="text" placeholder="Teléfono*" id="inputLastName" class="form-control-lg form-control bg-dark text-white border-0" required>
               </div>
               <div class="col-lg-12 mb-3">
-                <input type="email" placeholder="Correo Electrónico" id="inputEmail" class="form-control-lg form-control bg-dark text-white border-0">
+                <input type="email" placeholder="Correo Electrónico*" id="inputEmail" class="form-control-lg form-control bg-dark text-white border-0" required>
               </div>
               <div class="col-lg-12 mb-3">
-                <textarea name="message" placeholder="Mensaje" id="message" rows="8" class="form-control-lg form-control bg-dark text-white border-0"></textarea>
+                <textarea name="message" placeholder="Tu mensaje..." id="message" rows="8" class="form-control-lg form-control bg-dark text-white border-0" required></textarea>
+              </div>
+              <div class="col-lg-12 mb-3">
+                <label class="form-check-label text-white" for="checkboxPoliticaPrivacidad">
+                  <input type="checkbox" id="checkboxPoliticaPrivacidad" class="form-check-input" required> He leído y acepto la política de privacidad
+                </label>
               </div>
               <div class="text-center d-grid mt-1">
-                <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
+                <button type="button" class="btn btn-primary  pt-3 pb-3">
                   Enviar
                   <i class="fas fa-paper-plane"></i>
                 </button>
