index mk digital & css

--- a/paginas/marketingdigital.html
+++ b/paginas/marketingdigital.html
@@ -79,7 +79,7 @@
           
           </h1>
           <a id="services" href="#servicios">
-            <button type="button" class="rounded-pill btn-rounded">
+            <button type="button" class="btn-rounded">
               Tu éxito digital comienza aquí.<span><i class="fas fa-arrow-right"></i></span>
             </button>
           </a>
@@ -124,7 +124,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">01 Posicionamiento Web SEO
             </h3>
             <p class="lh-lg">
@@ -133,7 +133,7 @@
               resultados duraderos.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+              <button type="button" class="btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
@@ -155,7 +155,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
           <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
+            <!-- <div class="icon d-block fas fa-code"></div> -->
             <h3 class="display-3--title mt-1">02 Posicionamiento SEM </h3>
             <p class="lh-lg">
               Te ofrecemos una estrategia SEM efectiva y personalizada para impulsar la
@@ -163,7 +163,7 @@
               maximizando el retorno de tu inversión publicitaria.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+              <button type="button" class="btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
@@ -177,7 +177,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">03 Community Manager
             </h3>
             <p class="lh-lg">
@@ -186,7 +186,7 @@
               aumentar la visibilidad y el compromiso con tu marca.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+              <button type="button" class="btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
@@ -207,7 +207,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto">
           <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
+            <!-- <div class="icon d-block fas fa-code"></div> -->
             <h3 class="display-3--title mt-1">04 Social Media Marketing </h3>
             <p class="lh-lg">
               Nos especializamos en desarrollar estrategias efectivas de Social Media
@@ -215,7 +215,7 @@
               tu audiencia y alcanzar tus objetivos de negocio en las redes sociales.
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+              <button type="button" class="btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
@@ -228,7 +228,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services my-auto order-1 order-md-0">
           <div class="services__content">
 
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
+            <!-- <div class="icon d-block fas fa-cloud-upload-alt"></div> -->
             <h3 class="display-3--title mt-1">05 Diseño CRO
             </h3>
             <p class="lh-lg">
@@ -237,7 +237,7 @@
               sitio web o aplicaciónPrincipio del formulario
             </p>
             <a href="#contact">
-              <button type="button" class="rounded-pill btn-rounded border-primary">Saber más<span><i
+              <button type="button" class="btn-rounded border-primary">Saber más<span><i
                     class="fas fa-arrow-right"></i></span></button>
             </a>
           </div>
